tmux: Use Ctrl-a as the prefix
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,8 @@
+# Use Ctrl-a instead of Ctrl-b as the prefix
+# From https://wiki.archlinux.org/index.php/Tmux
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+
 set-option -g default-shell $SHELL
