--- a/tmux.conf
+++ b/tmux.conf
@@ -9,3 +9,10 @@ set-option -g default-shell $SHELL
 
 # Use <P>L to move to the previous window
 bind-key L last-window
+
+# Use vim-like hjkl key bindings to navigate across panes.
+# Eg. <P>h changes focus to the pane to the left of the current pane.
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
