[DOCS] tmux.conf: Enhance a comment
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,9 @@ bind-key L last-window
 
 # Use vim-like hjkl key bindings to navigate across panes.
 # Eg. <P>h changes focus to the pane to the left of the current pane.
+# Notice the `-r`. This means recursive. So if there are 2 panes above our
+# current pane and we want to move to that, we can type <P>kk instead of
+# <P>k <P>k
 bind-key -r h select-pane -L
 bind-key -r j select-pane -D
 bind-key -r k select-pane -U
