--- a/tmux.conf
+++ b/tmux.conf
@@ -19,3 +19,6 @@ bind-key -r h select-pane -L
 bind-key -r j select-pane -D
 bind-key -r k select-pane -U
 bind-key -r l select-pane -R
+
+# <P>r to reload ~/.tmux.conf if we made changes
+bind-key r source-file ~/.tmux.conf
