[FEAT] tmux.conf: Vertical and horizontal stacking
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,3 +22,12 @@ bind-key -r l select-pane -R
 
 # <P>r to reload ~/.tmux.conf if we made changes
 bind-key r source-file ~/.tmux.conf
+
+# <P>= arranges layout so that every pane is stacked vertically, ie. each pane
+# takes up the entire width of the terminal but height is evenly distributed
+# amongst the panes
+bind-key = select-layout even-vertical
+# <P>| arranges layout so that every pane is stacked horizontally, ie. each pane
+# takes up the entire height of the terminal but width is evenly distributed
+# amongst the panes
+bind-key | select-layout even-horizontal
