[FEAT] tmux.conf: bindings to resize panes
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,15 @@ bind-key -r l select-pane -R
 # <P>r to reload ~/.tmux.conf if we made changes
 bind-key r source-file ~/.tmux.conf
 
+# <P>< resizes the current pane 5 columns to the left
+bind-key < resize-pane -L 5
+# <P>> resizes the current pane 5 columns to the right
+bind-key > resize-pane -R 5
+# <P>+ resizes the current pane 5 rows upwards
+bind-key + resize-pane -U 5
+# <P>- resizes the current pane 5 rows downwards
+bind-key - resize-pane -D 5
+
 # <P>= arranges layout so that every pane is stacked vertically, ie. each pane
 # takes up the entire width of the terminal but height is evenly distributed
 # amongst the panes
