[FEAT] tmux.conf: Enable utf8 on status bar
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,3 +40,8 @@ bind-key = select-layout even-vertical
 # takes up the entire height of the terminal but width is evenly distributed
 # amongst the panes
 bind-key | select-layout even-horizontal
+
+# Enable utf8 on status bar
+set-window-option -g utf8 on
+set -g status on
+set -g status-utf8 on
