[FEAT] tmux.conf: Enable vi mode in command line
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,3 +45,6 @@ bind-key | select-layout even-horizontal
 set-window-option -g utf8 on
 set -g status on
 set -g status-utf8 on
+
+# In tmux command line, press <Esc> to use some vim normal mode bindings
+set-option -g status-keys vi
