[FEAT] tmux.conf: Allow scrolling back 30000 lines in history
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,3 +48,6 @@ set -g status-utf8 on
 
 # In tmux command line, press <Esc> to use some vim normal mode bindings
 set-option -g status-keys vi
+
+# Allow scrolling back 30000 lines in history
+set -g histroy-limit 30000
