--- a/tmux.conf
+++ b/tmux.conf
@@ -51,3 +51,6 @@ set-option -g status-keys vi
 
 # Allow scrolling back 30000 lines in history
 set -g histroy-limit 30000
+
+# Automatically renumber windows as they are closed
+set-option -g renumber-windows on
