[BUGFIX] Correct spelling mistake
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,7 +50,7 @@ set -g status-utf8 on
 set-option -g status-keys vi
 
 # Allow scrolling back 30000 lines in history
-set -g histroy-limit 30000
+set -g history-limit 30000
 
 # Automatically renumber windows as they are closed
 set-option -g renumber-windows on
