[FEAT] tmux.conf: Extend message display time to 2s
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,3 +54,6 @@ set -g history-limit 30000
 
 # Automatically renumber windows as they are closed
 set-option -g renumber-windows on
+
+# Extend display message time to 2 seconds
+set-option -g display-time 2000
