[FEAT] Install tmux plugin manager
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,3 +57,10 @@ set-option -g renumber-windows on
 
 # Extend display message time to 2 seconds
 set-option -g display-time 2000
+
+
+### tmux plugin manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run ~/.tmux/plugins/tpm/tpm
