[FEAT] Install tmux-fpp plugin
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,5 +62,12 @@ set-option -g display-time 2000
 ### tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# install tmux-fpp plugin
+# Just use <PREFIX>-f to activate fpp for the current tmux pane
+# To rebind the fpp key to say the 'x' key, add the following setting in
+# this file:
+#
+#     set -g @fpp-key 'x'
+set -g @plugin 'tmux-plugins/tmux-fpp'
 
 run ~/.tmux/plugins/tpm/tpm
