[BUGFIX] tmux: new windows and panes in same directory as current pane
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,13 @@ set -g prefix C-a
 bind C-a send-prefix
 
 
+# Required for tmux 2.0 so that new windows and panes will use the same
+# directory as the current pane's directory.
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+
 set-option -g default-shell $SHELL
 
 # Use <P>L to move to the previous window
