[FEAT] Copy text from tmux buffer
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,8 @@ bind C-a send-prefix
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+# From https://linuxhint.com/copy-paste-clipboard-tmux/
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard >/dev/null"
 
 
 set-option -g default-shell $SHELL
