--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,10 @@ bind C-a send-prefix
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-# From https://linuxhint.com/copy-paste-clipboard-tmux/
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard >/dev/null"
+# if-shell is from: https://stackoverflow.com/a/40902312
+# bind C-c run ... is from: https://linuxhint.com/copy-paste-clipboard-tmux/
+if-shell "uname | grep -q Linux" "bind C-c run \"tmux save-buffer - | xclip -i -sel clipboard >/dev/null\""
+if-shell "uname | grep -q Darwin" "bind C-c run \"tmux save-buffer - | pbcopy\""
 
 
 set-option -g default-shell $SHELL
