--- a/tmux.conf
+++ b/tmux.conf
@@ -66,6 +66,12 @@ set-option -g renumber-windows on
 # Extend display message time to 2 seconds
 set-option -g display-time 2000
 
+# Display (almost the same) colors when using vim in tmux as using vim
+# outside of tmux.
+# https://deductivelabs.com/blog/tech/using-true-color-vim-tmux/
+# https://unix.stackexchange.com/a/689201
+set -ag terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
 
 ### tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
