[DOCS] Use better link for if-shell
Signed-off-by: Yan Han Pang <539739+yanhan@users.noreply.github.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ bind C-a send-prefix
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-# if-shell is from: https://stackoverflow.com/a/40902312
+# if-shell is from: https://superuser.com/a/539657
 # bind C-c run ... is from: https://linuxhint.com/copy-paste-clipboard-tmux/
 if-shell "uname | grep -q Linux" "bind C-c run \"tmux save-buffer - | xclip -i -sel clipboard >/dev/null\""
 if-shell "uname | grep -q Darwin" "bind C-c run \"tmux save-buffer - | pbcopy\""
